--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -1,27 +1,22 @@
 {
-    "appTitle": "ChatGpt",
-    "toSecondPage": "to second page",
-    "secondPage": "this is the second Page",
-    "countTimes": "current total count is:",
-    "noConversationTips": "There seems to be no session, click on the left to create one quickly, or simply type prompt to create one",
-    "newConversation": "New Conversation",
-    "renameConversation": "Rename Conversation",
-    "settings": "Settings",
-    "theme": "Theme 변경",
-    "language": "언어 변경",
-    "delete": "삭제",
-    "reName": "ReName",
-    "inputPrompt": "Input your prompt",
-    "inputPromptTips": "Input your prompt here",
-    "enterKey": "Enter the chatgpt key",
-    "enterKeyTips": "Enter the chatgpt key here",
-    "setProxyUrl": "Enter the proxy url",
-    "setProxyUrlTips": "Select the proxy url here.",
-    "ok": "OK",
-    "cancel": "Cancel",
-    "useStreamApi": "Use Stream API",
-    "gptModel": "Select GPT Model",
-    "llmHint": "Select LLM Model",
-    "gmlBaseUrl": "Please input chatglm base url"
-  }
-  
+  "appTitle": "ChatGPT",
+  "countTimes": "current total count is:",
+  "noConversationTips": "There seems to be no session, click on the left to create one quickly, or simply type prompt to create one",
+  "newConversation": "새로운 대화",
+  "renameConversation": "대화 이름 변경",
+  "settings": "설정",
+  "language": "언어 변경",
+  "delete": "삭제",
+  "reName": "이름 변경",
+  "inputPrompt": "메세지를 입력하세요",
+  "inputPromptTips": "Input your prompt here",
+  "enterKey": "OpenAI API key를 입력하세요",
+  "enterKeyTips": "Enter the chatgpt key here",
+  "setProxyUrl": "Enter the proxy url",
+  "setProxyUrlTips": "Select the proxy url here.",
+  "save": "저장",
+  "ok": "OK",
+  "cancel": "Cancel",
+  "useStreamApi": "Use Stream API",
+  "gptModel": "GPT모델을 선택하세요"
+}
