--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -4,19 +4,21 @@
   "noConversationTips": "There seems to be no session, click on the left to create one quickly, or simply type prompt to create one",
   "newConversation": "새로운 대화",
   "renameConversation": "대화 이름 변경",
+  "setRenameConversation": "새로운 대화 이름을 입력하세요",
   "settings": "설정",
   "language": "언어 변경",
   "delete": "삭제",
   "reName": "이름 변경",
   "inputPrompt": "메세지를 입력하세요",
-  "inputPromptTips": "Input your prompt here",
+  "inputPromptTips": "ChatGPT에게 질문하세요",
   "enterKey": "OpenAI API key를 입력하세요",
-  "enterKeyTips": "Enter the chatgpt key here",
+  "enterKeyTips": "발급받은 key를 입력하세요",
   "setProxyUrl": "Enter the proxy url",
-  "setProxyUrlTips": "Select the proxy url here.",
+  "setProxyUrlTips": "프록시 URL을 선택하세요",
   "save": "저장",
   "ok": "OK",
-  "cancel": "Cancel",
-  "useStreamApi": "Use Stream API",
-  "gptModel": "GPT모델을 선택하세요"
+  "cancel": "취소",
+  "useStreamApi": "메세지 스트림 사용",
+  "gptModel": "GPT모델을 선택하세요",
+  "checkApiKey" : "API Key가 일치하지 않습니다.\n https://platform.openai.com/account/api-keys 에서 Key를 발급해주세요."
 }
