fix : API Key 검증 로직 수정
1. 설정에서 API Key 입력시 keyboard로 인해 rebuild되어 생긴 이슈 수정
2. README 이미지 자료 추가

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -20,5 +20,6 @@
   "cancel": "Cancel",
   "useStreamApi": "Use Stream API",
   "gptModel": "Select GPT Model",
-  "checkApiKey" : "The API Key does not match.\nPlease issue a Key at https://platform.openai.com/account/api-keys"
+  "checkApiKey" : "The API Key does not exist.\nPlease issue a Key at https://platform.openai.com/account/api-keys",
+  "notExistApiKey": "The API Key does not exist"
 }
